# barmpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-barmpy.yml
barmpy/: barn.py
docs/: Makefile  barn.html  example.html  genindex.html  index.html  math.html  objects.inv  pub_docs.sh  py-modindex.html  search.html  searchindex.js  usage.html
docs/_modules/: index.html
docs/_modules/barmpy/: barn.html
docs/_sources/: barn.rst.txt  example.rst.txt  index.rst.txt  usage.rst.txt
docs/_static/: bizstyle.js
docs/source/: barn.rst  conf.py  index.rst  math.rst  usage.rst
examples/: lib.bib  ols.py  tutorial.Rmd
test/: test_barn.py  test_nn.py  test_tfnn.py
tests/: test_barn.py  test_basic.py  test_nn.py  test_tfnn.py
